Weather class + 404 page

--- a/app/views/pages/index.ejs
+++ b/app/views/pages/index.ejs
@@ -10,7 +10,18 @@
 </head>
 <body>
     <main>
-        <h1>Error 404</h1>
+        <h2>Регистрация</h2>
+        <form method="POST" action="/register">
+            <input type="email" name="email">
+            <input type="password" name="password">
+            <input type="submit">
+        </form>
+
+        <form method="POST" action="/login">
+            <input type="email" name="email">
+            <input type="password" name="password">
+            <input type="submit">
+        </form>
     </main>
 </body>
 </html>
