--- a/app/views/error/404.ejs
+++ b/app/views/error/404.ejs
@@ -6,7 +6,7 @@
     <meta name="description" content="Web app">
     <meta name="keyboard" content="Web, app">
     <meta name="viewport" content="width=540, initial-scale=1">
-    <!-- <link rel="shortcut icon" href="../static/images/icon.ico" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="./static/images/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./static/css/normalize.css">
     <link rel="stylesheet" href="./static/css/main.css">
 </head>
