--- a/app/views/pages/index.ejs
+++ b/app/views/pages/index.ejs
@@ -1,27 +1,366 @@
 <!DOCTYPE html>
-<html>
+<HTML>
 <head>
-    <title>Error 404</title>
-    <meta charset="utf-8">
+	<title>Caring Milf App</title>
+	<meta charset="utf-8">
     <meta name="description" content="Web app">
     <meta name="keyboard" content="Web, app">
     <meta name="viewport" content="width=540, initial-scale=1">
-    <!-- <link rel="shortcut icon" href="../static/images/icon.ico" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="./static/images/icon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./static/css/normalize.css">
+	<!-- Icons -->
+	<link href="./static/css/all.css" rel="stylesheet">
+	<!-- This page styles -->
+	<link href="./static/css/home.css" rel="stylesheet">
+	<!-- Left menu -->
+	<link href="./static/css/leftMenu.css" rel="stylesheet">
+	<!-- Weather Cards -->
+	<link rel="stylesheet" href="./static/css/weaterCards.css">
+	<link rel="stylesheet" href="./static/css/main.css">
 </head>
 <body>
-    <main>
-        <h2>Регистрация</h2>
-        <form method="POST" action="/register">
-            <input type="email" name="email">
-            <input type="password" name="password">
-            <input type="submit">
-        </form>
+<div class="page-container">
+    <!-- [BEGIN] Left menu -->
+	<div class="secondary-sidebar">
+		<div class="logo-box">
+			Caring Milf
+		</div>
+		<div class="secondary-sidebar-menu">
+			<ul>
+                <!-- Spacer -->
+                <li class="active-link-top">
+					<div class="active-link-top-add">
+                    </div>
+				</li>
+				<li class="active-link">
+					<a href="/home">Главная</a>
+				</li>
+				<li class="active-link-bottom">
+                    <div class="active-link-bottom-add">
+					    <a href="/home">Главная</a>
+                    </div>
+				</li>
+				<li>
+					<a href="/home">Название 3</a>
+				</li>
+				<li>
+					<a href="/home">Название 4</a>
+				</li>
+				
+			</ul>
+		</div>
+    </div>
+     <!-- [END] Left menu -->
+	<div class="page-inner">
+		<div class="row">
+			<div class="col-1">
+			  <div class="card">
+				<div class="card-search">
+					<div class="row">
+						<div class="col-search-1">
+							<input type="text" class="input-search" placeholder='Поиск'>
+							<button type="button" class="btn"><i class="fas fa-search"></i></button>
+						</div>
+						<div class="col-search-2 text-right fas-violet">
+							<i class="far fa-user-circle fa-20x"></i> 
+							<i class="fas fa-bell fa-20x"></i> 
+							<i class="far fa-question-circle fa-20x"></i>
+						</div>
+					</div>
+				</div>
+			  </div>
+				
+			</div>
+		</div>
+		<div class="row padding-30">
+			<div class="col-card-3">
+			  <div class="card">
+				<div class="card-body">
+					10.12.2020 <i class="far fa-calendar-alt"></i>
+				</div>
+			  </div>
+			</div>
+			<div class="col-card-4">
+			  <div class="card">
+				<div class="card-body">
+					Одесса, Одесская область <i class="fas fa-map-marker-alt"></i>
+				</div>
+			  </div>
+			</div>
+			<div class="col-card-3">
+			  <div class="card">
+				<div class="card-body">
+					<button type="button" class="btn"><i class="fas fa-male"></i></button>
+					<button type="button" class="btn btn-outline"><i class="fas fa-female"></i></button>
+				</div>
+			  </div>
+			</div>
+		</div>
+		
+		<!-- Наполнятеся js -->
+		<div class="cards-wrapper" id="weather">
+			<!-- <div class="col-md-1">
+				<div class="col-left-right">
+					<i class="fas fa-chevron-left fa-2x"></i>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="card card-green">
+					<div class="card-body">
+						<div class="row">
+							<div class="col-2"><span class="time-weather">12:00</span></div>
+							<div class="col-2 col-2-padding"><img src='https://s1.iconbird.com/ico/2013/6/281/w256h25613715677480013PartlyCloudy.png' class='img-weather'></div>
+							
+							<div class="col-2 col-2-border">Температура</div>
+							<div class="col-2 col-2-padding">10&deg; C</div>
+							
+							<div class="col-2 col-2-border">Осадки</div>
+							<div class="col-2 col-2-padding">6%</div>
+							
+							<div class="col-2 col-2-border">Ветер</div>
+							<div class="col-2 col-2-padding">9км/час</div>
+							
+							<div class="col-2 col-2-border">Давление</div>
+							<div class="col-2 col-2-padding">761мм рт.ст.</div>
+							
+							<div class="col-2 col-2-border">Влажность</div>
+							<div class="col-2 col-2-padding">94%</div>
+						
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="card card-violet">
+					<div class="card-body">
+						<div class="row">
+							<div class="col-2"><span class="time-weather">12:00</span></div>
+							<div class="col-2 col-2-padding"><img src='https://s1.iconbird.com/ico/2013/6/281/w256h25613715677480013PartlyCloudy.png' class='img-weather'></div>
+							
+							<div class="col-2 col-2-border">Температура</div>
+							<div class="col-2 col-2-padding">10&deg; C</div>
+							
+							<div class="col-2 col-2-border">Осадки</div>
+							<div class="col-2 col-2-padding">6%</div>
+							
+							<div class="col-2 col-2-border">Ветер</div>
+							<div class="col-2 col-2-padding">9км/час</div>
+							
+							<div class="col-2 col-2-border">Давление</div>
+							<div class="col-2 col-2-padding">761мм рт.ст.</div>
+							
+							<div class="col-2 col-2-border">Влажность</div>
+							<div class="col-2 col-2-padding">94%</div>
+						
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="card card-orange">
+					<div class="card-body">
+						<div class="row">
+							<div class="col-2"><span class="time-weather">12:00</span></div>
+							<div class="col-2 col-2-padding"><img src='https://s1.iconbird.com/ico/2013/6/281/w256h25613715677480013PartlyCloudy.png' class='img-weather'></div>
+							
+							<div class="col-2 col-2-border">Температура</div>
+							<div class="col-2 col-2-padding">10&deg; C</div>
+							
+							<div class="col-2 col-2-border">Осадки</div>
+							<div class="col-2 col-2-padding">6%</div>
+							
+							<div class="col-2 col-2-border">Ветер</div>
+							<div class="col-2 col-2-padding">9км/час</div>
+							
+							<div class="col-2 col-2-border">Давление</div>
+							<div class="col-2 col-2-padding">761мм рт.ст.</div>
+							
+							<div class="col-2 col-2-border">Влажность</div>
+							<div class="col-2 col-2-padding">94%</div>
+						
+						</div>					
+					</div>
+				</div> 
+			</div>-->
 
-        <form method="POST" action="/login">
-            <input type="email" name="email">
-            <input type="password" name="password">
-            <input type="submit">
-        </form>
-    </main>
+
+			<!-- Слайдер пока не делаем -->
+			<!-- <div class="col-md-1">
+				<div class="col-left-right">
+					<i class="fas fa-chevron-right fa-2x"></i>
+				</div>
+			</div> -->
+		</div>
+		
+		<div class="row">
+			<div class="col-1">
+				<div class="card">
+					<div class="card-search">
+						<div class="clothes-title">Рекомендуемае одежда</div>
+						<div class="row">
+							<div class="col-2 col-center">
+								<div class="col-1"><span class="clothes clothes-green">Вверхняя Одежда</span></div>
+								<div class="row padding-15  clothes-row">
+									<div class="col-md-30">
+										<div class="clothes-left-right">
+											<i class="fas fa-chevron-left fa-2x"></i>
+										</div>
+									</div>
+									<div class="col-md-30">
+										<div class="card card-clothes">
+											<div class="card-body">
+												
+											</div>
+										</div>
+									</div>
+									<div class="col-md-30">
+										<div class="card card-clothes">
+											<div class="card-body">
+												
+											</div>
+										</div>
+									</div>
+									<div class="col-md-30">
+										<div class="card card-clothes">
+											<div class="card-body">
+												
+											</div>
+										</div>
+									</div>
+									
+									<div class="col-md-30">
+										<div class="clothes-left-right">
+											<i class="fas fa-chevron-right fa-2x"></i>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-2 col-center">
+								<div class="col-1 "><span class="clothes clothes-orange">Обувь</span></div>
+								<div class="row padding-15  clothes-row">
+									<div class="col-md-30">
+										<div class="clothes-left-right">
+											<i class="fas fa-chevron-left fa-2x"></i>
+										</div>
+									</div>
+									<div class="col-md-30">
+										<div class="card card-clothes">
+											<div class="card-body">
+												
+											</div>
+										</div>
+									</div>
+									<div class="col-md-30">
+										<div class="card card-clothes">
+											<div class="card-body">
+												
+											</div>
+										</div>
+									</div>
+									<div class="col-md-30">
+										<div class="card card-clothes">
+											<div class="card-body">
+												
+											</div>
+										</div>
+									</div>
+									
+									<div class="col-md-30">
+										<div class="clothes-left-right">
+											<i class="fas fa-chevron-right fa-2x"></i>
+										</div>
+									</div>
+								</div>
+							
+							</div>
+						</div>
+						<div class="row padding-15">
+							<div class="col-2 col-center">
+								<div class="col-1 "><span class="clothes clothes-violet">Лёгкая Одежда</span></div>
+								<div class="row padding-15  clothes-row">
+									<div class="col-md-30">
+										<div class="clothes-left-right">
+											<i class="fas fa-chevron-left fa-2x"></i>
+										</div>
+									</div>
+									<div class="col-md-30">
+										<div class="card card-clothes">
+											<div class="card-body">
+												
+											</div>
+										</div>
+									</div>
+									<div class="col-md-30">
+										<div class="card card-clothes">
+											<div class="card-body">
+												
+											</div>
+										</div>
+									</div>
+									<div class="col-md-30">
+										<div class="card card-clothes">
+											<div class="card-body">
+												
+											</div>
+										</div>
+									</div>
+									
+									<div class="col-md-30">
+										<div class="clothes-left-right">
+											<i class="fas fa-chevron-right fa-2x"></i>
+										</div>
+									</div>
+								</div>
+							
+							</div>
+							<div class="col-2 col-center">
+								<div class="col-1 "><span class="clothes clothes-purple">Аксессуары</span></div>
+								<div class="row padding-15  clothes-row">
+									<div class="col-md-30">
+										<div class="clothes-left-right">
+											<i class="fas fa-chevron-left fa-2x"></i>
+										</div>
+									</div>
+									<div class="col-md-30">
+										<div class="card card-clothes">
+											<div class="card-body">
+												
+											</div>
+										</div>
+									</div>
+									<div class="col-md-30">
+										<div class="card card-clothes">
+											<div class="card-body">
+												
+											</div>
+										</div>
+									</div>
+									<div class="col-md-30">
+										<div class="card card-clothes">
+											<div class="card-body">
+												
+											</div>
+										</div>
+									</div>
+									
+									<div class="col-md-30">
+										<div class="clothes-left-right">
+											<i class="fas fa-chevron-right fa-2x"></i>
+										</div>
+									</div>
+								</div>
+							
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- JS scripts -->
+<script src="./static/js/weatgerComponent.js"></script>
+
 </body>
-</html>
+</HTML>
