--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -10,10 +10,11 @@ body {
 	-webkit-text-size-adjust: 100%;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	font-size: 16px;
-	width: 100%;
+    width: 100%;
+    min-width: 1024px !important;
 	height: 100%;
 	margin: 0;
-	overflow-x: hidden;
+	/* overflow-x: */
     font-weight: normal;
     line-height: 1.6;
 }
