--- a/app/views/pages/index.ejs
+++ b/app/views/pages/index.ejs
@@ -196,10 +196,10 @@
 			<div class="col-1">
 				<div class="card">
 					<div class="card-search">
-						<div class="clothes-title">Рекомендуемае одежда</div>
+						<div class="clothes-title">Рекомендуемая одежда</div>
 						<div class="row">
 							<div class="col-2 col-center">
-								<div class="col-1"><span class="clothes clothes-green">Вверхняя Одежда</span></div>
+								<div class="col-1"><span class="clothes clothes-green">Верхняя Одежда</span></div>
 								<div class="row padding-15  clothes-row">
 									<div class="col-md-30">
 										<div class="clothes-left-right">
@@ -208,21 +208,21 @@
 									</div>
 									<div class="col-md-30">
 										<div class="card card-clothes">
-											<div class="card-body">
+											<div class="card-body" id="out_1">
 												
 											</div>
 										</div>
 									</div>
 									<div class="col-md-30">
 										<div class="card card-clothes">
-											<div class="card-body">
+											<div class="card-body" id="out_2">
 												
 											</div>
 										</div>
 									</div>
 									<div class="col-md-30">
 										<div class="card card-clothes">
-											<div class="card-body">
+											<div class="card-body" id="out_3">
 												
 											</div>
 										</div>
@@ -245,21 +245,21 @@
 									</div>
 									<div class="col-md-30">
 										<div class="card card-clothes">
-											<div class="card-body">
+											<div class="card-body" id="foot_1">
 												
 											</div>
 										</div>
 									</div>
 									<div class="col-md-30">
 										<div class="card card-clothes">
-											<div class="card-body">
+											<div class="card-body" id="foot_2">
 												
 											</div>
 										</div>
 									</div>
 									<div class="col-md-30">
 										<div class="card card-clothes">
-											<div class="card-body">
+											<div class="card-body" id="foot_3">
 												
 											</div>
 										</div>
@@ -285,21 +285,21 @@
 									</div>
 									<div class="col-md-30">
 										<div class="card card-clothes">
-											<div class="card-body">
+											<div class="card-body" id="light_1">
 												
 											</div>
 										</div>
 									</div>
 									<div class="col-md-30">
 										<div class="card card-clothes">
-											<div class="card-body">
+											<div class="card-body" id="light_2">
 												
 											</div>
 										</div>
 									</div>
 									<div class="col-md-30">
 										<div class="card card-clothes">
-											<div class="card-body">
+											<div class="card-body" id="light_3"> 
 												
 											</div>
 										</div>
@@ -323,21 +323,21 @@
 									</div>
 									<div class="col-md-30">
 										<div class="card card-clothes">
-											<div class="card-body">
+											<div class="card-body" id="acc_1">
 												
 											</div>
 										</div>
 									</div>
 									<div class="col-md-30">
 										<div class="card card-clothes">
-											<div class="card-body">
+											<div class="card-body" id="acc_2">
 												
 											</div>
 										</div>
 									</div>
 									<div class="col-md-30">
 										<div class="card card-clothes">
-											<div class="card-body">
+											<div class="card-body" id="acc_3">
 												
 											</div>
 										</div>
@@ -361,6 +361,7 @@
 
 <!-- JS scripts -->
 <script src="./static/js/weatgerComponent.js"></script>
+<script src="./static/js/ClothOut.js"></script>
 
 </body>
 </HTML>
