--- a/app/static/css/leftMenu.css
+++ b/app/static/css/leftMenu.css
@@ -28,11 +28,12 @@
 
 /* [START] Page links */
 .secondary-sidebar-menu {
-    margin-top: 5em;
+    /* margin-top: 5em; */
 }
 .secondary-sidebar-menu ul {
 	padding-inline-start: 0px;
-	padding-left: 20px;
+    padding-left: 20px;
+    margin-top: 0;
 }
 .secondary-sidebar-menu ul li {
 	list-style-type: none;
