--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600;700&display=swap');
+
+body{
+    font-family: 'Montserrat', sans-serif;
+}
 /* Error page - START */
 
 .error-wrapper{
