--- a/app/static/css/weaterCards.css
+++ b/app/static/css/weaterCards.css
@@ -19,10 +19,19 @@
 	border-left: 9px solid #F6BC17;
 }
 
-.card-body {
-	padding: .1rem 1.25rem;
+.header-card-body{
+    padding: 10px 10px;
+    box-shadow: 0px 0px 5px rgb(168, 168, 168);
+    border-radius: .9rem;
 }
 
 .time-weather {
     font-size: 40px;
+}
+#current-date{
+    font-weight: 600;
+}
+.address-field{
+    font-weight: 600;
+    padding-left: 35px;
 }
