--- a/app/static/css/leftMenu.css
+++ b/app/static/css/leftMenu.css
@@ -4,16 +4,13 @@
     min-height: 100%;
     float: left;
     width: 180px;
-    background-image: url(../images/sidenav.jpg);
-	background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    background-color: #5d4f8d;
 }
 /* [END] Backround left menu */
 
 /* [START] LOGO */
 .logo-box {
-    color: #000!important;
+    color: #fcf9ff;
     background: 0 0;
     font-weight: 700;
     font-size: 18px;
@@ -24,12 +21,16 @@
     font-family: Copperplate, "Copperplate Gothic Light", fantasy;
     font-size: 32px;
 }
+.about-application{
+    padding: 0em 0.5em 0em 0.5em;
+    text-align: center;
+    font-weight: 600;
+    color: #fcf9ff;
+}
+
 /* [END] LOGO */
 
 /* [START] Page links */
-.secondary-sidebar-menu {
-    /* margin-top: 5em; */
-}
 .secondary-sidebar-menu ul {
 	padding-inline-start: 0px;
     padding-left: 20px;
@@ -41,12 +42,12 @@
 	text-align: center;
 }
 .secondary-sidebar-menu li {
-    line-height: 2rem;
-    height: 2rem;
+    line-height: 3rem;
+    height: 3rem;
 }
 .secondary-sidebar-menu a {
 	color: #000!important;
-    font-weight: 700;
+    font-weight: 600;
 	text-decoration: none;
 }
 /* [END] Page links */
@@ -59,7 +60,7 @@
 }
 .active-link-top-add {
     border-radius: 0rem 0rem 1rem 0rem;
-    background-color: #2a3342;
+    background-color: #5d4f8d;
     width: 100%;
     height: 100%;
 }
@@ -74,5 +75,6 @@
 .active-link{
     background-color: #E3DFED;
     border-radius: 1rem 0rem 0rem 1rem;
+    padding: 5px 0;
 }
 /* [END] Active link */
