Clothes Cards Begin

--- a/app/views/pages/index.ejs
+++ b/app/views/pages/index.ejs
@@ -116,7 +116,7 @@
 					</div>
 					<div class="clothes-row">
 						<div class="">
-							<div class="one-clothes-component">
+							<div class="one-clothes-component ">
 								<img class="one-clothes-component-img" src="http://141.105.134.186/files/img/clothes/Shirt_short_sleeves_F.png" alt="">
 							</div>
 						</div>
@@ -312,6 +312,7 @@
 <!-- JS scripts -->
 <script src="./static/js/weatgerComponent.js"></script>
 <script src="./static/js/currentDate.js"></script>
+<script src="./static/js/ClothOut.js"></script>
 
 </body>
 </HTML>
