--- a/app/static/css/clothesCards.css
+++ b/app/static/css/clothesCards.css
@@ -31,6 +31,10 @@
 
 .one-clothes-component-label{
     text-align: center;
+    background-color: rgb(158, 158, 2);
+    padding: 0.1rem;
+    border-radius: 0.5rem;
+    color:white;
 }
 
 .one-clothes-component{
@@ -43,8 +47,12 @@
     border: 2px solid #5B4D8A;
     border-radius: .5rem;
     padding: .1rem;
-    background-color: #e3dfed;
+    /* background-color: #e3dfed; */
 }
+.clothes-card-bg {
+    background-color: #100038f3;
+}
+
 
 .one-clothes-component-img {
     max-width: auto;
