--- a/app/views/pages/index.ejs
+++ b/app/views/pages/index.ejs
@@ -114,29 +114,44 @@
 					<div class="one-clothes-component-label">
 						Легкая одежда
 					</div>
-					<div class="clothes-row">
+					<div class="clothes-row" id="block_1">
+						
+					</div>
+					<!-- <div class="clothes-row">
 						<div class="">
-							<div class="one-clothes-component ">
+							<div class="one-clothes-component">
 								<img class="one-clothes-component-img" src="http://141.105.134.186/files/img/clothes/Shirt_short_sleeves_F.png" alt="">
 							</div>
 						</div>
-						<div class="one-clothes-component">
-							<img class="one-clothes-component-img" src="http://141.105.134.186/files/img/clothes/Shirt_short_sleeves_F.png" alt="">
-						</div>
-						<div class="one-clothes-component">
-							<img class="one-clothes-component-img" src="http://141.105.134.186/files/img/clothes/Shirt_short_sleeves_F.png" alt="">
-						</div>
-					</div>
+					</div> -->
 				</div>
 				<div class="cards-clothes">
+					<div class="one-clothes-component-label">
+						Ноги
+					</div>
+					<div class="clothes-row" id="block_2">
+						
+					</div>
 
 				</div>
 			</div>
-			<div class="row-cards">
-				<div class="cards-clothes">
+			<div class="row-cards-second">
+				<div class="cards-clothes" id="">
+					<div class="one-clothes-component-label">
+						Верхняя одежда
+					</div>
+					<div class="clothes-row" id="block_3">
+						
+					</div>
 					
 				</div>
-				<div class="cards-clothes">
+				<div class="cards-clothes" id="">
+					<div class="one-clothes-component-label">
+						Аксессуары
+					</div>
+					<div class="clothes-row" id="block_4">
+						
+					</div>
 
 				</div>
 			</div>
