--- a/app/views/pages/index.ejs
+++ b/app/views/pages/index.ejs
@@ -40,12 +40,12 @@
 					<a href="/home">Главная</a>
 				</li>
 				
-				<!-- <li class="active-link-bottom">
+				<li class="active-link-bottom">
                     <div class="active-link-bottom-add">
-					    <a href="/myClothes">Мой гардероб</a>
+					    <!-- <a href="/myClothes">Мой гардероб</a> -->
                     </div>
 				</li>
-				<li>
+				<!-- <li>
 					<a href="/editClothes">Редактировать гардероб</a>
 				</li> -->
 				
