--- a/app/static/css/clothesCards.css
+++ b/app/static/css/clothesCards.css
@@ -37,7 +37,7 @@
 
 .one-clothes-component-label{
     text-align: center;
-    background-color: #9e9e02;
+    background-color: #913dc8;
     padding: 0.1rem;
     border-radius: 0.5rem;
     color:white;
@@ -45,7 +45,7 @@
     transition: .3s;
 }
 .one-clothes-component-label:hover{
-    background-color: #c0c000;
+    background-color: #0003c0;
 }
 
 .one-clothes-component{
@@ -56,6 +56,7 @@
 }
 .clothes-row > div {
     border: 2px solid #5B4D8A;
+    background-color: rgb(228, 228, 228);
     border-radius: .5rem;
     padding: .1rem;
     margin-top: 1rem;
