--- a/app/views/pages/index.ejs
+++ b/app/views/pages/index.ejs
@@ -24,7 +24,7 @@
     <!-- [BEGIN] Left menu -->
 	<div class="secondary-sidebar">
 		<div class="logo-box">
-			ITL ONAT
+			Caring Granny
 		</div>
 		<div class="about-application">
 			Мы поможем вам выбрать одежду по погоде ;)
@@ -71,7 +71,6 @@
 					</div>
 				</div>
 			  </div>
-				
 			</div>
 		</div>
 		<div class="row padding-30">
